fix loading aimation on mobile view

--- a/css/scss/helpers/_loading.scss
+++ b/css/scss/helpers/_loading.scss
@@ -42,6 +42,8 @@
 			height: 10px;
 			background: $main-color;
 			border-radius: 50%;
+			-webkit-animation: dotMove 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75)
+				infinite;
 			animation: dotMove 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75) infinite;
 		}
 		.letter {
@@ -62,12 +64,16 @@
 					height: 36px;
 					background: linear-gradient(90deg, #f4f5ff 10%, #ebf8ff);
 					transform-origin: 100% 0;
+					-webkit-animation: lineStretch 1800ms
+						cubic-bezier(0.25, 0.25, 0.75, 0.75) infinite;
 					animation: lineStretch 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75)
 						infinite;
 				}
 			}
 			&:nth-child(5) {
 				transform-origin: 100% 70%;
+				-webkit-animation: letterStretch 1800ms
+					cubic-bezier(0.25, 0.23, 0.73, 0.75) infinite;
 				animation: letterStretch 1800ms cubic-bezier(0.25, 0.23, 0.73, 0.75)
 					infinite;
 
@@ -82,6 +88,10 @@
 				}
 			}
 		}
+	}
+
+	@media (max-width: 576px) {
+		transform: scale(0.5) translate(-100%, -50%);
 	}
 }
 
